[package]
name = "demo2replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitbuffer = "0.10.9"
chrono = "0.4.38"
filenamify = "0.1.0"
iced = { version = "0.12.1", features = ["image"] }
image = "0.24.9"
rfd = "0.14.1"
steamlocate = "1.2.1"
tf-demo-parser = "0.5.1"
vtf = "0.2.1"
